--- a/commercialProject/css/style.scss
+++ b/commercialProject/css/style.scss
@@ -34,6 +34,7 @@ $fonts: 0.8vw;
     right: 0.5vw !important;
 }
 .slick-prev, .slick-next{
+    top: 35%;
     z-index: 2;
     font-size: 0px !important;
     color: transparent !important;
@@ -373,54 +374,7 @@ main{
         margin: 2vw 0;
         padding: 0 9vw;
     }
-    .homes{
-        .row{
-            justify-content: space-between;
-            .card-home{
-                .slide-home{
-                    width: 100%;
-                    height: 20vw;
-                    min-width: 0;
-                    border-radius: 2vw;
-                    .slider_item{
-                        height: 17vw;
-                        width: 100%;
-                        
-                        .slide-image{
-                            border-radius: 2vw;
-                            height: 100%;
-                            width: 100%;
-                            
-                        }
-                    }
-                }
-                form{
-                    input{
-                        border: 0.1vw solid #319F1C;
-                        padding: 0.5vw 1vw;
-                        border-radius: 0.5vw;
-                    }
-                    button{
-                        font-size: 0.8vw;
-                        border: 0.1vw solid #319F1C;
-                        padding: 0.5vw 1vw;
-                        border-radius: 0.5vw;
-                        background-color: #319F1C;
-                        color: #fff;
-                    }
-                }
-                button{
-                    margin: 0.5vw 0;
-                    font-size: 0.8vw;
-                    border: 0.1vw solid #FFDC0A;
-                    padding: 0.5vw;
-                    border-radius: 0.5vw;
-                    background-color: #FFDC0A;
-                    color: #000;
-                }
-            }
-        }
-    }
+
     .excurs{
         padding: 0 9vw;
         margin-bottom: 3vw;
@@ -538,62 +492,63 @@ main{
             height: 3vw;
             color: #fff;
         }
-        .packets{
-            justify-content: space-between;
-            position: relative;
-            .packet1{
-                height: 26vw !important;
+        
+    }
+    .packets{
+        justify-content: space-between;
+        position: relative;
+        .packet1{
+            height: 26vw !important;
+        }
+        .packet2{
+            height: 30vw !important;
+        }
+        .packet3{
+            height: 37vw !important;
+        }
+        .packet1, .packet2, .packet3{
+            box-shadow: 0px 0px 10px 15px rgba(34, 60, 80, 0.2);
+            border-radius: 2vw;
+            padding: 2vw;
+            .price1{
+                text-align: end;
+                width: 100%;
             }
-            .packet2{
-                height: 30vw !important;
+        }
+        .packet-yellow-border{
+            margin: 3vw 0;
+            box-shadow: 0px 0px 10px 15px rgba(255, 220, 10, 0.25);
+            border-radius: 2vw;
+            padding: 2vw;
+            height: 10vw;
+            p{
+                font-size: 1.2vw;
             }
-            .packet3{
-                height: 37vw !important;
-            }
-            .packet1, .packet2, .packet3{
-                box-shadow: 0px 0px 10px 15px rgba(34, 60, 80, 0.2);
-                border-radius: 2vw;
-                padding: 2vw;
-                .price1{
-                    text-align: end;
-                    width: 100%;
-                }
-            }
-            .packet-yellow-border{
-                margin: 3vw 0;
-                box-shadow: 0px 0px 10px 15px rgba(255, 220, 10, 0.25);
-                border-radius: 2vw;
-                padding: 2vw;
-                height: 10vw;
-                p{
-                    font-size: 1.2vw;
-                }
-            }
-            .packet-red-border{
-                position: absolute;
-                right: -30vw;
-                bottom: 5vw;
-                width: 70vw;
-                height: 15vw;
-                box-shadow: 0px 0px 10px 15px rgba(246, 27, 51, 0.2);
-                border-radius: 2vw;
-                padding: 2vw;
+        }
+        .packet-red-border{
+            position: absolute;
+            right: -20.5vw;
+            bottom: 5vw;
+            width: 70vw;
+            height: 15vw;
+            box-shadow: 0px 0px 10px 15px rgba(246, 27, 51, 0.2);
+            border-radius: 2vw;
+            padding: 2vw;
+            display: flex;
+            padding-left: 3vw;
+            .home, .price{
+                width: 18vw;
+                font-size: 1vw;
                 display: flex;
-                padding-left: 3vw;
-                .home, .price{
-                    width: 18vw;
-                    font-size: 1vw;
-                    display: flex;
-                    flex-direction: column;
-                    text-align: center;
-                    span{
-                        width: 100%;
-                        margin: 0.5vw 0;
-                        border-bottom: 0.1vw solid black;
-                    }
+                flex-direction: column;
+                text-align: center;
+                span{
+                    width: 100%;
+                    margin: 0.5vw 0;
+                    border-bottom: 0.1vw solid black;
                 }
-                
             }
+            
         }
     }
     .credit{
@@ -847,6 +802,35 @@ strong{
     color: #319F1C;
 }
 @media (max-width: 960px) {
+    .slick-prev{
+        left: -1vw  !important;
+    }
+    .slick-next{
+        right: 0.5vw !important;
+    }
+    .slick-prev, .slick-next{
+        top: 35%;
+        z-index: 2;
+        width: 0 !important;
+        position: static !important;
+        font-size: 0px !important;
+        color: transparent !important;
+        border: none !important;
+        background-color: transparent !important;
+    
+        &::before, &::after{
+            background-color: #F6F6F6 !important;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            width: 10vw;
+            height:10vw;
+            font-size: 8vw !important;
+            border-radius: 100%;
+            color: #319F1C !important;
+            border: 0.2vw solid #F6F6F6;
+        }
+    }
     header{
         .header-top{
             flex-wrap: wrap;
@@ -998,6 +982,214 @@ strong{
     main{
         .menu-right-fixed{
             display: none;
+        }
+        .first-block{
+            background:  linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1) ), url("./../img/background-block-1.png");
+            background-size: cover, cover;
+            h1{
+                font-size: 5vw;
+            }
+            p{
+                font-size: 3vw;
+                font-weight: 900;
+            }
+            button{
+                height: 10vw;
+                font-size: 4vw;
+            }
+        }
+        .block-facts{
+            height: auto;
+            .row{
+                padding: 2vw 0;
+                .block-facts-item{
+                    font-size: 3vw;
+                    img{
+                        width: 10vw;
+                    }
+                }
+            }
+        }
+        .big-text-block{
+            h2{
+                font-size: 4vw;
+            }
+            p,ul{
+                font-size: 3vw;
+            }
+        }
+        .homes{
+            .row{
+                justify-content: space-between;
+                .card-home{
+                    margin-bottom: 5vw;
+                    .slide-home{
+                        width: 100%;
+                        height: 50vw;
+                        min-width: 100%;
+                        border-radius: 2vw;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        .slick-list{
+                            position: relative;
+                            left: 5vw;
+                            width: 100%;
+                        }
+                        .slider_item{
+                            height: 45vw;
+                            width: 100%;
+                            
+                            .slide-image{
+                                border-radius: 2vw;
+                                height: 100%;
+                                width: 100%;
+                                
+                            }
+                        }
+                    }
+                    form{
+                        input{
+                            border: 0.1vw solid #319F1C;
+                            padding: 0.8vw 1vw;
+                            border-radius: 0.5vw;
+                        }
+                        button{
+                            font-size: 4vw;
+                            border: 1vw solid #319F1C;
+                            padding: 0.5vw 1vw;
+                            border-radius: 0.5vw;
+                            background-color: #319F1C;
+                            color: #fff;
+                        }
+                    }
+                    .col-11{
+                        padding-right: 5px;
+                    }
+                    button{
+                        margin: 0.5vw 0;
+                        width: 100%;
+                        font-size: 4vw;
+                        border: 0vw solid #FFDC0A;
+                        padding: 0vw;
+                        border-radius: 0.5vw;
+                        background-color: #FFDC0A;
+                        color: #000;
+                    }
+                }
+            }
+        }
+        .excurs{
+            .excurs-card{
+                padding: 2vw;
+                margin-bottom: 10vw;
+            }
+        }
+        .video-block{
+            .carusel{
+                height: 30vw;
+                margin: 5vw 0;
+                .carusel-img{
+                    max-height: 30vw;
+                    max-width: 35vw;
+                }
+            }
+            .row{
+                .panel{
+                    flex-wrap: wrap;
+                    p{
+                        font-size: 2.9vw;
+                        line-height: 6vw;
+                    }
+                }
+            }
+        }
+        .prices{
+            p{
+                font-size: 4vw;
+            }
+            .prices-messenger{
+                .btn-mess{
+                    font-size: 5vw;
+                    height: 15vw;
+                }
+            }
+        }
+        .packets{
+            .packet1, .packet2, .packet3{
+                height: auto !important;
+                margin-bottom: 10vw;
+            }
+            .packet-yellow-border{
+                height: auto;
+                p{
+                    font-size: 4vw;
+                }
+            }
+            .packet-red-border{
+                position: static;
+                width: 100%;
+                height: auto;
+                margin: 6vw 0;
+                bottom: 0;
+                .home, .price{
+                    font-size: 3vw;
+                    width: 50%;
+                }
+            }
+        }
+        .credit{
+            h3{
+                font-size: 5vw;
+            }
+            .bank{
+                height: 15vw;
+            }
+            p{
+                font-size: 3.5vw;
+                font-weight: 900;
+            }
+        }
+        .garant{
+            ul{
+               flex-direction: column; 
+               align-items: flex-start;
+            }
+        }
+        .action{
+            .left-item{
+                height: 15vw;
+            }
+            .action-item{
+                height: auto;
+            }
+            .action-all{
+                .action-surprise{
+                    position: static;
+                    border-radius: 2vw;
+                    padding: 2vw;
+                    width: 100%;
+                    height: auto;
+                    text-align: center;
+                    p{
+                        font-size: 5vw;
+                    }
+                }
+            }
+        }
+        .project{
+            h3{
+                font-size: 4vw;
+            }
+            button{
+                font-size: 5vw;
+                padding: 2vw 4vw;
+            }
+            .plashka{
+                height: auto;
+                padding: 5vw;
+                margin-bottom: 5vw;
+            }
         }
     }
     footer{
