--- a/commercialProject/css/style.css
+++ b/commercialProject/css/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .slick-prev, .slick-next {
-  top: 20vw;
+  top: 20vw !important;
   z-index: 2;
   font-size: 0px !important;
   color: transparent !important;
@@ -473,7 +473,8 @@ main .homes .row {
 }
 main .homes .row .card-home .slide-home {
   width: 100%;
-  height: 20vw;
+  height: auto;
+  margin-bottom: 5vw;
   min-width: 0;
   border-radius: 2vw;
 }
