--- a/commercialProject/css/style.scss
+++ b/commercialProject/css/style.scss
@@ -34,7 +34,7 @@ $fonts: 0.8vw;
     right: 0.5vw !important;
 }
 .slick-prev, .slick-next{
-    top: 20vw;
+    top: 20vw !important;
     z-index: 2;
     font-size: 0px !important;
     color: transparent !important;
@@ -380,7 +380,8 @@ main{
             .card-home{
                 .slide-home{
                     width: 100%;
-                    height: 20vw;
+                    height: auto;
+                    margin-bottom: 5vw;
                     min-width: 0;
                     border-radius: 2vw;
                     .slider_item{
