--- a/commercialProject/css/style.scss
+++ b/commercialProject/css/style.scss
@@ -1961,16 +1961,391 @@ strong{
     }
     main{
         .project-dmitrov-brus{
+            h3{
+                font-size: 5vw;
+                margin: 4vw 0;
+            }
             .product-image{
+                max-height: 40vw;
+                .product-image-all{
+                    max-height: 40vw;
+                    img{
+                        height: 13vw;
+                    }
+                }
                 .product-img{
 
                 }
             }
+            button{
+                font-size: 4vw
+            }
+            form{
+                input{
+                    font-size: 4vw;
+                    margin-bottom: 1vw;
+                }
+                input[type="submit"]{
+                    line-height: 6vw;
+                }
+            }
+            .project-dmitrov-stats{
+                span{
+                    font-size: 2.5vw;
+                }
+            }
+            .project-dmitrov-price{
+                p{
+                    font-size: 3.5vw;
+                    strong{
+                        font-size: 6vw;
+                    }
+                }
+            }
+            .project-dmitrov-description{
+                ul{
+                    font-size: 4vw;
+                    line-height: 6vw;
+                }
+            }
+        }
+        .dmitrov-home{
+            .slider-plan{
+                height: 40vw;
+                .slick-prev, .slick-next{
+                    position: absolute !important;
+                }
+                .slick-prev{
+                    left: -5vw !important;
+                }
+                .slick-next{
+                    right: 5vw !important;
+                }
+                .slider_item{
+                    height: 30vw;
+                    .slide-hover{
+                        display: none;
+                    }
+                }
+            }
+            button{
+                font-size: 5vw;
+                width: 100%;
+                padding: 0 5vw;
+            }
+        }
+        .dmitrov-galery{
+            img{
+                width: 50%;
+            }
+        }
+        .block-form{
+            height: auto;
+            .form-content{
+                h2{
+                    font-size: 8vw;
+                }
+                p{
+                    font-size: 4vw;
+                    font-weight: 900;
+                }
+                form{
+                    width: 100%;
+                    input{
+                        height: auto;
+                        font-size: 4vw;
+                        line-height: 6vw;
+                        &[type="submit"]{
+                            height: auto;
+                            font-size: 4vw;
+                            line-height: 6vw;
+                            width: 50%;
+                        }
+                    }
+                    textarea{
+                        height: 25vw;
+                        font-size: 3vw;
+                        line-height: 4.5vw;
+                    }
+                    
+                }
+            }
+
         }
 
-
-
-
+        .price-list{
+            button{
+                font-size: 4vw;
+                img{
+                    width: 5vw;
+                    height: 5vw;
+                    margin: 3vw;
+                }
+            }
+            .price-list-stats{
+                font-size: 4vw;
+                h4{
+                    font-size: 4.5vw;
+                    margin: 4vw 0;
+                }
+                form{
+                    label{
+                        font-size: 4vw;
+                    }
+                    input[type="radio"]{
+                        height: 6.5vw;
+                        width: 6.9vw;
+                    }
+                }
+            }
+            .calc-price, .sale5, .action-friend{
+                margin-bottom: 5vw;
+                h3{
+                    margin-top: 2vw;
+                    font-size: 5vw;
+                }
+                p{
+                    font-size: 3vw;
+                    font-weight: 900;
+                }
+                button{
+                    font-size: 4vw;
+                    line-height: 6vw;
+                }
+                input{
+                    height: auto;
+                    margin-bottom: 4vw;
+                    &[type="submit"]{
+                        font-size: 4vw;
+                    }
+                }
+            }
+            .house-item{
+                margin: 3vw 15px !important;
+                img{
+                    margin: 0 -15px;
+                }
+                .house-item-stats{
+                    margin-right: 30px;
+                    font-size: 3vw;
+                    strong{
+                        font-size: 4vw;
+                    }
+                    a{
+                        img{
+                            width: 10vw;
+                        }
+                    }
+                }
+            }
+        }
+        .working-perfect{
+            flex-direction: column;
+            height: 100vw;
+            .text-special{
+                align-items: flex-start;
+                text-align: start;
+                width: 100%;
+                h1{
+                    font-size: 4vw;
+                    line-height: 5vw;
+                }
+                p{
+                    font-size: 3vw;
+                    line-height: 4vw;
+                    max-width: 70%;
+                }
+            }
+            form{
+                max-width: 100%;
+                width: 100%;
+                height: auto;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                &::before{
+                    width: 24vw;
+                    height: 18vw;
+                    right: 0.2vw;
+                    top: -7.8vw;
+                }
+                .text{
+                    h2{
+                        font-size: 4vw;
+                    }
+                    p{
+                        font-size: 3vw;
+                    }
+                }
+                input{
+                    height: auto;
+                    font-size: 4vw;
+                    line-height: 6vw;
+                    width: 45%;
+                    margin-bottom: 2vw;
+                    &[type="submit"]{
+                        font-size: 4vw;
+                        line-height: 6vw;
+                        height: auto;     
+                        width: 45%;       
+                    }
+                }
+                span{
+                    font-size: 2vw;
+                }
+            }
+        }
+        .test-surprise{
+            background-position: right bottom;
+            h3{
+                font-size: 4vw;
+            }
+            p{
+                font-size: 3vw;
+            }
+            .surprise{
+                height: auto;
+                h2{
+                    width: 100%;
+                    text-align: center;
+                }
+                .surprise-item{
+                    img{
+                        height: 15vw;
+                    }
+                    p{
+                        font-size: 3vw;
+                    }
+                }
+            }
+        }
+        .ready-project{
+            h3{
+                font-size: 4vw;
+            }
+            p{
+                font-size: 3vw;
+            }
+            form{
+                padding-top: 3vw;
+                input{
+                    height: auto;
+                    font-size: 3vw;
+                    line-height: 4.5vw;
+                    margin-bottom: 2vw;
+                }
+                textarea{
+                    font-size: 3vw;
+                    line-height: 4.5vw;
+                }
+                .messengers{
+                    .whats-app, .viber, .telegram{
+                        width: 10vw;
+                        height: 10vw;
+                    }
+                }
+            }
+            button{
+                width: 100%;
+                font-size: 3vw;
+            }
+        }
+        .services{
+            h1{
+                width: 100%;
+                font-size: 5vw;
+                text-align: start;
+            }
+            .service-item{
+                h3{
+                    font-size: 5vw;
+                }
+                p{
+                    font-size: 3vw;
+                }
+                form{
+                    input{
+                        height: auto;
+                        width: 100%;
+                        font-size: 3vw;
+                        &[type="submit"]{
+                            height: auto;
+                            width: 100%;
+                            font-size: 2.5vw;
+                        }
+                    }
+                }
+                .services-image{
+                    height: 20vw;
+                    img{
+                        width: 35vw;
+                    }
+                    .img2{
+                        height: 41vw;
+                        left: -6vw; 
+                    }
+                }
+                .reverse{
+                    .services-image{
+                        img{
+                            height: 50vw;
+                        }
+                        
+                    }
+                }
+            }
+            .row{
+                align-items: flex-end;
+                .services-image{
+                    bottom: 0;
+                }
+            }
+        }
+        .portfolio{
+            .portfolio-content{
+                .portfolio-item{
+                    width: 45%;
+                    height: 25vw;
+                    margin-bottom: 5.5vw;
+                    div{
+                        width: 100%;
+                        p{
+                            font-size: 2vw;
+                            margin: 0;
+                        }
+                    }
+                }
+            }
+            .btn-container{
+                button{
+                    width: 100%;
+                    font-size: 5vw;
+                    line-height: 7vw;
+                }
+            }
+        }
+        .faq{
+            .row{
+                background-color: rgba(255, 255, 255, 0.7);
+            }
+            h3{
+                font-size: 6vw;
+            }
+            p{
+                font-size: 3vw;
+            }
+            form{
+                input, textarea{
+                    height: auto;
+                    margin-bottom: 3vw;
+                    &[type="submit"]{
+                        width: 100%;
+                        font-size: 4vw;
+                        line-height: 6vw;
+                    }
+                }
+            }
+        }
         .menu-right-fixed{
             display: none;
         }
